objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>Accel_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Replacement for Solution Picklist</description>
        <label>Solution</label>
        <referenceTo>Solution__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Parts_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Parts Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agent_Appointment_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agent Appointment Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agent_Appointment_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agent Appointment Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agent_Appointment_Start__c</fullName>
        <label>Agent Appointment Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agent_Assigned__c</fullName>
        <label>Agent Assigned</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agent Alan Walker</fullName>
                </value>
                <value>
                    <fullName>Agent Antony Burgos</fullName>
                </value>
                <value>
                    <fullName>Agent Bernardo Guillen</fullName>
                </value>
                <value>
                    <fullName>Agent Bo Kim</fullName>
                </value>
                <value>
                    <fullName>Agent Brian Obremski</fullName>
                </value>
                <value>
                    <fullName>Agent Byron Love</fullName>
                </value>
                <value>
                    <fullName>Agent Carla Clark</fullName>
                </value>
                <value>
                    <fullName>Agent Chris Rogers</fullName>
                </value>
                <value>
                    <fullName>Agent Craig Demaret</fullName>
                </value>
                <value>
                    <fullName>Agent Darrin Devine</fullName>
                </value>
                <value>
                    <fullName>Dave McWilliams</fullName>
                    <label>Agent Dave McWilliams</label>
                </value>
                <value>
                    <fullName>Agent Dave Nelson</fullName>
                </value>
                <value>
                    <fullName>Agent David Lanier</fullName>
                </value>
                <value>
                    <fullName>Agent David Zappa</fullName>
                </value>
                <value>
                    <fullName>Agent Dirk Butler</fullName>
                </value>
                <value>
                    <fullName>Agent Doug Neverdowski</fullName>
                </value>
                <value>
                    <fullName>Agent Emmett Scott</fullName>
                </value>
                <value>
                    <fullName>Agent Eric Lundt</fullName>
                </value>
                <value>
                    <fullName>Agent Fidel Aguilar</fullName>
                </value>
                <value>
                    <fullName>Agent Fred Mareno</fullName>
                </value>
                <value>
                    <fullName>Agent Hector Robert</fullName>
                </value>
                <value>
                    <fullName>Agent Heidi Kuhls</fullName>
                </value>
                <value>
                    <fullName>Agent Jason Ramey</fullName>
                </value>
                <value>
                    <fullName>Agent Jill Nogajewski</fullName>
                </value>
                <value>
                    <fullName>Agent Jim Comingore</fullName>
                </value>
                <value>
                    <fullName>Agent John Chase</fullName>
                </value>
                <value>
                    <fullName>Agent Mark Calvin</fullName>
                </value>
                <value>
                    <fullName>Agent Marty Dixon</fullName>
                </value>
                <value>
                    <fullName>Agent Matt Muenchow</fullName>
                </value>
                <value>
                    <fullName>Agent Mike Cockerill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Accel_Equipment_Working__c</fullName>
        <label>All Accel Equipment Working?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Buttons_working__c</fullName>
        <label>All Buttons working?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amusement_Project__c</fullName>
        <label>Amusement Project</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amusement PM</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Select Choice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appointments_in_Queue__c</fullName>
        <description>Picklist used to display if there are appointments in Queue for a Technician in the description of the Service Appointment / Work Order on the SFS Movile App. Populated by flow Service Resource - After Update.</description>
        <inlineHelpText>Picklist used to display if there are appointments in Queue for a Technician in the description of the Service Appointment / Work Order on the SFS Movile App.</inlineHelpText>
        <label>Appointments in Queue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arrival_Date_time__c</fullName>
        <label>Arrival(Date/Time)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Arrival__c</fullName>
        <label>Arrival</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Recent_Cases__c</fullName>
        <description>Number of recent Cases populated from the Asset related to the Case.</description>
        <formula>Case.Asset.Recent_Cases__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of recent Cases populated from the Asset related to the Case.</inlineHelpText>
        <label>Asset Recent Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Resource_ID__c</fullName>
        <label>Assigned Resource ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistance_Type__c</fullName>
        <label>Assistance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On site assistance</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Parts running</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BV_Lights__c</fullName>
        <label>BV Lights</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On</fullName>
                </value>
                <value>
                    <fullName>Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Sign_Placed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Sign Placed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Caller_Information__c</fullName>
        <label>Caller Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Caller_Phone__c</fullName>
        <description>Added to replace legacy Caller Information field to allow for clickable phone numbers.</description>
        <label>Caller Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Cancel_Time__c</fullName>
        <label>Cancel Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Create_Date_Time__c</fullName>
        <formula>TEXT( Case.CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Create Date/Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Created_Date__c</fullName>
        <formula>Text(Case.Created_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case: Created Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>TEXT(Case.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <formula>TEXT(Case.Case_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Frequency__c</fullName>
        <formula>TEXT(Account.Collection_Frequency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collection Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collection_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collection Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Common_Name__c</fullName>
        <formula>Software_Type_Needed_For_Appointment__r.Common_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Common Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Appointment_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance Appointment Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Compliance_Date_Submitted__c</fullName>
        <label>Compliance Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concierge_Account__c</fullName>
        <formula>Account.Concierge_Service__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concierge Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_PM_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed PM Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_By_Email__c</fullName>
        <formula>CreatedBy.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Lifetime_Meter__c</fullName>
        <label>Current Lifetime Meter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days_Between_Collection__c</fullName>
        <label>Days Between Collection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Departure__c</fullName>
        <label>Departure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Did_you_bill_test_the_VGT__c</fullName>
        <label>Bill test the VGT?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnRoute_Date_Time__c</fullName>
        <label>EnRoute (Date/Time)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EnRoute__c</fullName>
        <label>EnRoute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Assets__c</fullName>
        <label>Equipment/Assets</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Juke</fullName>
                </value>
                <value>
                    <fullName>Pool Table</fullName>
                </value>
                <value>
                    <fullName>Dartboards</fullName>
                </value>
                <value>
                    <fullName>Arcade game</fullName>
                </value>
                <value>
                    <fullName>Driver</fullName>
                </value>
                <value>
                    <fullName>Cranes</fullName>
                </value>
                <value>
                    <fullName>Pinballs</fullName>
                </value>
                <value>
                    <fullName>Tabletop</fullName>
                </value>
                <value>
                    <fullName>Shuffleboard</fullName>
                </value>
                <value>
                    <fullName>Golden Tee</fullName>
                </value>
                <value>
                    <fullName>Changer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Amount__c</fullName>
        <formula>Current_Lifetime_Meter__c - Previous_Lifetime_Meter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Geocoding For Chatter Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Priority__c</fullName>
        <formula>CASE(TEXT(Priority), &apos;Critical&apos; , 1 ,&apos;High&apos; ,2,&apos;Medium&apos; ,3 , &apos;Low&apos;, 4, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduling Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__VisitingHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visiting Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow Up Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IGB__c</fullName>
        <formula>Account.IGB_License__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IGB #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Work_Type__c</fullName>
        <formula>WorkType.Inactive__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inactive Work Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Installer_Task__c</fullName>
        <label>Installer Task</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Install</fullName>
                </value>
                <value>
                    <fullName>Relocate</fullName>
                </value>
                <value>
                    <fullName>Swap</fullName>
                </value>
                <value>
                    <fullName>Removal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inventory_Site__c</fullName>
        <description>Where is the inventory check taking place</description>
        <label>Inventory Site</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vehicle</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_touch_screen_calibrated__c</fullName>
        <label>Touch screen calibrated?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issues_to_Follow_Up_On__c</fullName>
        <label>Issues to Follow Up On</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_Contact__c</fullName>
        <label>Location Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Priority__c</fullName>
        <description>Meant for display on the mobile uses Location Priority value... app.. ie. A=&gt; High B =&gt; Medium C =&gt; Low</description>
        <label>Location Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HIGH PRIORITY</fullName>
                </value>
                <value>
                    <fullName>MEDIUM PRIORITY</fullName>
                </value>
                <value>
                    <fullName>LOW PRIORITY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance_Start_Time__c</fullName>
        <label>Maintenance Start Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Software__c</fullName>
        <label>Manufacturer (Software)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aristocrat</fullName>
                </value>
                <value>
                    <fullName>Bally</fullName>
                </value>
                <value>
                    <fullName>IGT/Spielo</fullName>
                </value>
                <value>
                    <fullName>Novomatic</fullName>
                </value>
                <value>
                    <fullName>SGI</fullName>
                </value>
                <value>
                    <fullName>WMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <formula>Asset.GP_Manufacturer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manufacturer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Start_Date__c</fullName>
        <formula>EndDate + Days_Between_Collection__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Collection Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Period_Meter__c</fullName>
        <label>Period Meter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Physical_Count__c</fullName>
        <label>Physical Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Lifetime_Meter__c</fullName>
        <label>Previous Lifetime Meter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Priority_lookup__c</fullName>
        <formula>TEXT(Account.Priority__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <description>per John Ciszek, this field appears on the Software Updates action layout, in the Service App.
https://accel-entertainment.monday.com/boards/942883797/pulses/1840350689</description>
        <label>Project Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Go Live</fullName>
                </value>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Add &amp; Swap</fullName>
                </value>
                <value>
                    <fullName>Add &amp; Reconfigure</fullName>
                </value>
                <value>
                    <fullName>Swap</fullName>
                </value>
                <value>
                    <fullName>Swap &amp; Reconfigure</fullName>
                </value>
                <value>
                    <fullName>Reconfigure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Manager_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regional Manager Appointment Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAS__c</fullName>
        <formula>Asset.SAS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGI_Repair_Work_Order_Number__c</fullName>
        <label>SGI Repair Work Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SGI_Work_Order_Received_Date__c</fullName>
        <description>Track the day SGI approves the submitted work order.</description>
        <label>SGI Work Order Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduling_Policy_to_Use__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Scheduling Policy that should be used when booking an appointment for this Work Order.</description>
        <label>Scheduling Policy to Use</label>
        <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Region__c</fullName>
        <formula>TEXT(Account.Service_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Grade__c</fullName>
        <label>Site Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>N/A( Location Closed)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Notes__c</fullName>
        <label>Site Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Software_Needed_For_Appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Software Needed For Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Software_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Software Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Software_Shipped_Date__c</fullName>
        <label>Software Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Software_Type_Needed_For_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>replacing the previous picklist field &quot;Type of Software Needed For Appointment&quot;
lookup to Gameset object</description>
        <label>Software Type Needed For Appointment</label>
        <referenceTo>Gameset__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution_Notes__c</fullName>
        <label>Solution Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Solution</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Project_Type__c</fullName>
        <label>Special Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Select Choice</fullName>
                </value>
                <value>
                    <fullName>Cradle Point Installs</fullName>
                </value>
                <value>
                    <fullName>Repairs</fullName>
                </value>
                <value>
                    <fullName>TC Install</fullName>
                </value>
                <value>
                    <fullName>CPU Blowout</fullName>
                </value>
                <value>
                    <fullName>VSR Lock Swap</fullName>
                </value>
                <value>
                    <fullName>Signage Checks</fullName>
                </value>
                <value>
                    <fullName>USB Install</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Amusement PM</fullName>
                </value>
                <value>
                    <fullName>NRT Security Plate</fullName>
                    <isActive>false</isActive>
                    <label>NRT Security Plate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spoke_to_Mgr_Owner_employee__c</fullName>
        <description>Did you speak to Manager/Owner/Employee to verify no immediate concerns?</description>
        <label>Spoke to Mgr/Emp/Owner ?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage_Equals_Scheduled__c</fullName>
        <label>Status = In Progress</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage_Scheduled_to_Completed__c</fullName>
        <formula>Status_New__c -  Stage_Equals_Scheduled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Scheduled to Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Change__c</fullName>
        <formula>LastModifiedDate -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Completed__c</fullName>
        <label>Status = Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_New__c</fullName>
        <label>Status = New</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_New_to_Scheduled__c</fullName>
        <formula>Stage_Equals_Scheduled__c - Status_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status New to Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submission_Date_time__c</fullName>
        <label>Submission/End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submission_Time__c</fullName>
        <label>Submission Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Swap_Type__c</fullName>
        <label>Swap Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Hours_of_PM_Appointment__c</fullName>
        <label>Total PM Time(Hours:Minutes)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_Spent__c</fullName>
        <formula>(Submission_Date_time__c -  EnRoute_Date_Time__c)*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <formula>EndDate - StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VGT Only</fullName>
                </value>
                <value>
                    <fullName>Redemption Only</fullName>
                </value>
                <value>
                    <fullName>VGT &amp; Redemption</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>